# tagz

./: .gitignore  Cargo.toml
.cargo/: config
examples/: example.rs
generator/: Cargo.toml
generator/src/: main.rs  parser.rs  renames.rs  spec.rs
generator/src/generators/: builder.rs  child.rs  element.rs
generator/src/parsers/: element.rs  idl.rs
src/: lib.rs
