[package]
name = "generator"
version = "0.1.0"
edition = "2021"
authors = ["🇫🇷 Romain TRUCHI <romain.truchi.06@gmail.com>"]

[dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
regex = "1.10.2"
reqwest = "0.11.22"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
syn = "2.0.42"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
weedle = "0.12.0"
